sbnd updates for v1_04_00

--- a/sbndqm/dqmAnalysis/CRT/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/CRT/CMakeLists.txt
@@ -1,12 +1,2 @@
-cet_build_plugin( BernCRTdqm art::module
-  LIBRARIES
-  art::Framework_Services_Registry
-  ROOT::Core
-  sbndaq_artdaq_core::sbndaq-artdaq-core_Overlays_Common
-  artdaq_core::artdaq-core_Data
-  artdaq_utilities::artdaq-utilities_Plugins
-  sbndaq_online::storage
-  sbndaq_online::hiredis
-  sbndqm_Decode_Mode
-)
-
+add_subdirectory(ICARUS)
+add_subdirectory(SBND)
