--- a/sbndqm/Decode/TPC/SBND/CMakeLists.txt
+++ b/sbndqm/Decode/TPC/SBND/CMakeLists.txt
@@ -1,10 +1,10 @@
-#add_subdirectory(ChannelMap)
+add_subdirectory(DQMChannelMap)
 # this is borrowed from sbndaq-artdaq-core to make the c7 compiler happy
 
 add_definitions(-Wno-nested-anon-types)
 
-cet_build_plugin( SBNDTPCDecoder art::module
-  SOURCE SBNDTPCDecoder_module.cc
+cet_build_plugin( SBNDDQMTPCDecoder art::module
+  SOURCE SBNDDQMTPCDecoder_module.cc
   LIBRARIES
   sbndaq_artdaq_core::sbndaq-artdaq-core_Overlays_SBND
   sbndaq_artdaq_core::sbndaq-artdaq-core_Overlays_SBND_NevisTPC
@@ -16,8 +16,8 @@ cet_build_plugin( SBNDTPCDecoder art::module
   art::Framework_Core
   ROOT::Core
   ROOT::Tree 
-  #sbndqm_Decode_TPC_SBND_ChannelMap_TPCChannelMapService_service
-  sbndcode_ChannelMaps_TPC_TPCChannelMapService_service
+  sbndqm_Decode_TPC_SBND_DQMChannelMap_TPCDQMChannelMapService_service
+  #sbndcode_ChannelMaps_TPC_TPCChannelMapService_service
 )
 
 install_headers()
